--- a/tests/Makefile.ice40
+++ b/tests/Makefile.ice40
@@ -7,4 +7,4 @@ YOSYS_SCRIPT ?= synth_ice40 -nodffe -nocarry; ice40_opt -unlut; abc -lut 4;
 #RR_PATCH_TOOL ?= $(PWD)/../ice40/utils/ice40_patch_routing.py
 RR_PATCH_TOOL ?= $(PWD)/../ice40/utils/ice40_patch_routing_from_icebox.py
 RR_PATCH_CMD ?= \
-	$(RR_PATCH_TOOL)
+	$(RR_PATCH_TOOL) --device=$(DEVICE)
